--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -11,7 +11,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{19809F44-D2EA-5D4C-60D9-5697C184EB18}</ProjectGuid>
+    <ProjectGuid>{105925E0-89DF-D941-EC08-2DA927EF3701}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -62,6 +62,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\IA2 Things\EventFSM.cs" />
+    <Compile Include="Assets\IA2 Things\FList.cs" />
+    <Compile Include="Assets\IA2 Things\Grid\GridEntity.cs" />
+    <Compile Include="Assets\IA2 Things\Grid\Queries.cs" />
+    <Compile Include="Assets\IA2 Things\Grid\SpatialGrid.cs" />
+    <Compile Include="Assets\IA2 Things\State.cs" />
+    <Compile Include="Assets\IA2 Things\StateConfigurer.cs" />
+    <Compile Include="Assets\IA2 Things\Transition.cs" />
+    <Compile Include="Assets\IA2 Things\Utility.cs" />
     <Compile Include="Assets\ParticleDestroy.cs" />
     <Compile Include="Assets\Scripts\Base.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
@@ -307,61 +316,61 @@
     <None Include="Assets\AmplifyShaderEditor\Plugins\EditorResources\Previews\Preview_NoiseGeneratorNode.shader" />
     <None Include="Assets\AmplifyShaderEditor\Plugins\EditorResources\Previews\Preview_DesaturateNode.shader" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="com.unity.multiplayer-hlapi.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="com.unity.multiplayer-weaver.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/com.unity.multiplayer-weaver.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/com.unity.multiplayer-weaver.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.XR.LegacyInputHelpers">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Sprite.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.SpatialTracking">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/UnityEditor.SpatialTracking.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/UnityEditor.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.SpatialTracking">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/UnityEngine.SpatialTracking.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.XR.LegacyInputHelpers">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/UnityEditor.XR.LegacyInputHelpers.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/UnityEditor.XR.LegacyInputHelpers.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="com.unity.multiplayer-hlapi.Runtime">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Runtime.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -535,19 +544,19 @@
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.XRModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Advertisements">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/PackageCache/com.unity.ads@2.3.1/Runtime/UnityEngine.Advertisements.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/PackageCache/com.unity.ads@2.3.1/Runtime/UnityEngine.Advertisements.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Advertisements.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/PackageCache/com.unity.ads@2.3.1/Runtime/UnityEngine.Advertisements.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/PackageCache/com.unity.ads@2.3.1/Runtime/UnityEngine.Advertisements.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/agezm/OneDrive/Escritorio/Cuatrimestre 5/Programacion 2/Mobile/Castle Defender Mobile/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>E:/Tarea/Cuatrimestre 6/IA II/TP - IA 2 - Martinez - Torre/TP - IA 2 - Martinez - Torre/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
