--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ Library
 Temp
 .vs
 obj
+obj/Debug/Assembly-CSharp-Editor.csproj.CoreCompileInputs.cache
+obj/Debug/Assembly-CSharp-Editor.csprojAssemblyReference.cache
+obj/Debug/Assembly-CSharp.csproj.CoreCompileInputs.cache
+obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+TP - IA 2 - Martinez - Torre.sln
